# PicoCast

./: .gitignore  CONTRIBUTING.md  README.md  make_research_log.py  pyproject.toml  snapshot.js  update_nav.py
.agents/: AGENTS.md
docs/: data.md  index.html  limitations.md  research_log.html  roadmap.md
notebooks/: candidate_replay.ipynb  plot_radar_pngs.ipynb  run_gate_cache_and_sweeps.ipynb  run_regional_discovery.ipynb  sample_volume_exploration.ipynb
scripts/: __init__.py  associate_cross_radar_tracklets.py  build_case_from_csv.py  build_evidence_audit_v1.py  build_gate_feature_cache.py  build_ml_feature_table.py  build_tracklet_review_packet.py  candidate_utils.py  cluster_near_track_gates.py  compare_regional_tracklets_to_telemetry.py  discover_regional_balloon_like_clusters.py  download_nexrad_case.py  download_regional_nexrad.py  download_wind_context.py  export_case_geojson.py  extract_near_track_gates.py  filter_plausible_tracklets.py  fit_candidate_path.py  inject_audit_minimaps.py  link_regional_tracklets.py  make_balloon_siting_map.py  make_candidate_validation_map.py  make_interactive_map.py  make_path_dashboard.py  make_plausible_tracklet_dashboard.py  make_radar_science_lab.py  make_regional_discovery_dashboard.py  make_review_packet_dashboard.py  make_review_packet_gis_overlay.py  make_sequence_map.py  match_regional_scans_to_telemetry.py  match_track_to_radar_scans.py  plot_case_track.py  plot_top_candidates.py  preview_nexrad_case.py  run_discovery_parameter_sweep.py  score_near_track_candidates.py  score_sitings.py  train_candidate_classifier.py  (+7 more)
(+122 files in other folders)
