[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nexrad-picoballoon"
version = "0.1.0"
description = "Batch research MVP for detecting and tracking weak picoballoon-like targets in NEXRAD Level II data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "NEXRAD Picoballoon Research Collaborators" }
]
keywords = ["nexrad", "radar", "picoballoon", "weather-radar", "research"]
dependencies = [
  "boto3>=1.34",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "PyYAML>=6.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "typer>=0.12",
  "xarray>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
radar = [
  "nexradaws>=1.1",
  "s3fs>=2024.1",
  "xradar>=0.6",
  "wradlib>=2.0",
  "arm-pyart>=1.18",
]
notebooks = [
  "jupyterlab>=4",
]

[project.scripts]
nexrad-pico = "nexrad_picoballoon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nexrad_picoballoon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
